<resources>
    <string name="app_name">E-Commerse</string>
    <string-array name="opciones">
        <item>PANADERIA</item>
        <item>CARNES</item>
        <item>IR AL CARRO DE COMPRAS</item>

    </string-array>

    <string name="card_number">Card Number</string>
    <string name="card_name">Name</string>
    <string name="card_validthru">Valid Thru</string>
    <string name="card_cvv">CVV</string>
    <string name="card_save">Save</string>
    <string name="title_activity_portada">Portada</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>

