<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B341C6"
    tools:context=".Pago">

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/creditCardBorderColor" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCardFront"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/credit_card_bg"
        android:elevation="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings">

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/creditCardTextColor"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvCardValidThru"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.20" />

        <TextView
            android:id="@+id/tvCardNumber2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="@color/creditCardTextColor"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvCardValidThru"
            app:layout_constraintLeft_toRightOf="@+id/tvCardNumber"
            app:layout_constraintWidth_percent="0.20" />

        <TextView
            android:id="@+id/tvCardNumber3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="@color/creditCardTextColor"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvCardValidThru"
            app:layout_constraintLeft_toRightOf="@+id/tvCardNumber2"
            app:layout_constraintWidth_percent="0.20" />

        <TextView
            android:id="@+id/tvCardNumber4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textColor="@color/creditCardTextColor"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvCardValidThru"
            app:layout_constraintLeft_toRightOf="@id/tvCardNumber3"
            app:layout_constraintWidth_percent="0.20" />

        <TextView
            android:id="@+id/tvCardValidThru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="125dp"
            android:layout_marginRight="125dp"
            android:textColor="@color/creditCardTextColor"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/cardFlag"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvCardName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:textAllCaps="true"
            android:textColor="@color/creditCardTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.7" />

        <ImageView
            android:id="@+id/cardFlag"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCardBack"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/credit_card_bg"
        android:elevation="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings">

        <TextView
            android:id="@+id/tvBankAcc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="Account"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvCardAcc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/card_cvv"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvCardCvv"
            app:layout_constraintLeft_toRightOf="@+id/tvBankAcc"
            app:layout_constraintWidth_percent="0.2" />

        <TextView
            android:id="@+id/tvCardAcc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="0001 102346546"
            android:textColor="@color/creditCardTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.6" />

        <TextView
            android:id="@+id/tvCardCvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/creditCardTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tvCardAcc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clCardFront">

        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:inputType="number"
            android:maxLength="16"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_name"
            android:inputType="textCapWords"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/etCardNumber" />

        <EditText
            android:id="@+id/etCardValidThru"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/card_validthru"
            android:inputType="date"
            android:maxLength="5"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCardName"
            app:layout_constraintWidth_percent="0.4" />

        <EditText
            android:id="@+id/etCardCvv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/card_cvv"
            android:inputType="number"
            android:maxLength="3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCardName"
            app:layout_constraintWidth_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSaveCard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/credit_card_bg"
        android:text="@string/card_save"
        android:textColor="@color/creditCardTextColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>